# Lux-Design-S2

./: .gitignore  base_env.yml  environment.yml  environments.yml  pyproject.toml
dev/: environment.yml
dev/trial-0/: README.md  environments.yml  train.py
dev/trial-1/: agent.py  notebook.ipynb  train-1.ipynb  utils.py
dev/trial-1/videos/: DtRBlwTvqCyRzfZpon.webm  OFbWzpRcDJsKOKgqFv.webm  QiGcSHbHApTBngPHvr.webm  ZQNHeDBkMwNjOVmMLc.webm  ckijzlCzkylCoMjVVd.webm  dHxtburMRSpcKsvbww.webm  iIwrDyxnvDsjTRbLlZ.webm  kpFULXUwDtPRYyXihS.webm  ldYtLerEWybILghZvO.webm
dev/trial-1/wrappers/: controllers.py
dev/trial-2-sb/: agent.py  environments.yml  envs.py  parse_args.py  research.py  sample.txt  tensorboard_callback.py  train-1.ipynb  train.py  utils.py
dev/trial-2-sb/kits/: README.md
dev/trial-2-sb/logs/PPO_1/: events.out.tfevents.1682249265.BeTweaks-MacBook-Pro.local.509.0  events.out.tfevents.1682309155.BeTweaks-MacBook-Pro.local.55062.0
dev/trial-2-sb/logs/PPO_2/: events.out.tfevents.1682250880.BeTweaks-MacBook-Pro.local.7613.0
dev/trial-2-sb/logs/PPO_3/: events.out.tfevents.1682250920.BeTweaks-MacBook-Pro.local.7858.0
dev/trial-2-sb/logs/PPO_4/: events.out.tfevents.1682251001.BeTweaks-MacBook-Pro.local.8309.0
dev/trial-2-sb/policies/: factory_placement.py
dev/trial-2-sb/wrappers/: controllers.py  custom_env_wrappers.py  obs_wrappers.py  replay_wrappers.py  sb3_wrappers.py
luxai_s2/luxai_s2/: env.py  unit.py
luxai_s2/luxai_s2/spaces/: act_space.py  obs_space.py
notebooks/trial1/: main.py  train.ipynb
notebooks/trial1/wrappers/: controllers.py
(+6 files in other folders)
