[tool.poetry]
name = "lux-design-s2"
version = "0.1.0"
description = ""
authors = ["BeTweak <ys@betweak.com>"]
readme = "README.md"
packages = [{include = "lux_design_s2"}]

[tool.poetry.dependencies]
python = "3.7.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
